# startup-success-engine

./: .env.example  .flake8  .gitignore  Makefile  README.md  codebase_memory.md  mlflow.db  pyproject.toml  test_init.py
.gemini/: settings.json
.github/workflows/: ci.yml
app/backend/: inference.py  main.py
app/frontend/: package-lock.json
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/app/analytics/: page.tsx
app/frontend/src/app/settings/: page.tsx
app/frontend/src/components/: FeatureExplanation.tsx  PredictionForm.tsx  Sidebar.tsx  SimilarStartups.tsx
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/raw/: .gitignore  startups.csv.dvc
docker/: backend.Dockerfile  docker-compose.yml  prometheus.yml
feature_store/: feature_store.yaml  features.py
mlruns/1/737bb42ead394b58832e780f29469cdb/artifacts/model/: MLmodel  conda.yaml  model.cb  python_env.yaml  requirements.txt
src/: benchmark_embeddings.py  config.py  data_pipeline.py  engine.py  features.py  models.py  monitor_drift.py  train.py
src/utils/: generate_mock_data.py
tests/: test_api.py  test_data_pipeline.py  test_inference.py
