[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "startup-intelligence"
version = "0.1.0"
description = "A production-grade ML system that predicts startup success."
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pandas = "^2.1.0"
pandera = "^0.16.1"
catboost = "^1.2.1"
optuna = "^3.3.0"
mlflow = "^2.7.0"
feast = {extras = ["postgres", "redis"], version = "^0.33.1"}
shap = "^0.42.1"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
redis = "4.2.2"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
flake8 = "^6.1.0"

[tool.pyright]
extraPaths = ["app/backend"]
